TableHeaderMenu: fix wrong height if no filter table and fields visible
If no filter table and filter fields are visible in the table header
menu, a scrollbar is visible in IE. The vertical-align property is
required, since the baseline is different when overflow is set. This
is correct behavior according to CSS specification.

Reviewed-on: https://git.eclipse.org/r/153976
Tested-by: Thomas Siegrist <thomas.siegrist@bsi-software.com>

--- a/eclipse-scout-core/src/table/TableHeaderMenu.less
+++ b/eclipse-scout-core/src/table/TableHeaderMenu.less
@@ -36,6 +36,7 @@
 
 .table-header-menu-actions {
   display: inline-block;
+  vertical-align: bottom; // necessary, to fix wrong height in IE.
   padding: @table-header-menu-padding;
 }
 
